<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.forgotpassword.PasswordChangeActivity">


    <RelativeLayout
        android:id="@+id/rl_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_header">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:paddingLeft="5dp"
            >

            <ImageView
                android:id="@+id/iv_signup_header"
                style="@style/txt_style_heading1l"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_marginHorizontal="@dimen/dimen_15dp"
android:layout_marginVertical="16dp"
android:src="@drawable/ic_arrow_back_24dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_signup_header2"
            style="@style/txt_style_heading4d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/dimen_2dp"
             android:layout_toRightOf="@id/rl_back"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/fp_headertop" />

    </RelativeLayout>
    <ScrollView
        android:id="@+id/rl_signup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_otp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="70dp">


    <RelativeLayout
        android:id="@+id/rl_loginmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_otp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="@dimen/dimen_10dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/advirahealnew"
            />

        <RelativeLayout
            android:id="@+id/rl_login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_centerVertical="true">


            <TextView
                android:id="@+id/tv_otpverified"
                style="@style/txt_style_heading4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/fp_otpverified" />

            <TextView
                android:id="@+id/tv_password"
                style="@style/txt_style_heading4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_otpverified"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/fp_newpassword" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_password"
                android:autofillHints="@string/prompt_password"
                android:drawableEnd="@drawable/ic_visibility_off_24dp"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="5sp"
                android:drawableRight="@drawable/ic_visibility_off_24dp"
                android:hint="min. 8 characters"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                style="@style/txt_style_heading4l"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@drawable/editbox_selector"
                android:padding="@dimen/dimen_15dp"
                android:inputType="textPassword"  />

            <TextView
                android:id="@+id/tv_password2"
                style="@style/txt_style_heading4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/fp_confirmpass" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_password2"
                android:autofillHints="@string/prompt_password"
                android:drawableEnd="@drawable/ic_visibility_off_24dp"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="5sp"
                android:drawableRight="@drawable/ic_visibility_off_24dp"
                android:hint="min. 8 characters"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                style="@style/txt_style_heading4l"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/editbox_selector"
                />



        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/rl_footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/dimen_25dp">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/txt_style_heading2d"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/fp_submit"
            android:textColor="@color/colorYellow"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>
